# Agentic-AI

SimplifAI/: README.md  background.js  content.js  llm_handler.js  manifest.json  options.html  options.js  package-lock.json  package.json
SimplifAI/backend/: pyproject.toml  simplifai_api.py
SimplifAI/backend/SimplifAI_backend.egg-info/: PKG-INFO  SOURCES.txt
